# scipy-2022-dev

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  environment.yml  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: main.yml
src/scipy_dev/: auxiliary.py  config.py  task_combine_sections.py  task_create_visualization.py  task_fill_repo.py  task_render_presentation.py  task_test_installations.py  visualizations.py
src/scipy_dev/notebooks/: 01_first_optimization_with_scipy_optimize.ipynb  02_convert_previous_example_to_estimagic.ipynb  03_play_with_algorithm_and_algo_options.ipynb  04_benchmarking.ipynb  05_bounds_and_constraints.ipynb  05_constrained_optimization.ipynb  06_global_optimization.ipynb  06_scaling-Copy1.ipynb  06_scaling.ipynb  07_automatic_differentiation.ipynb  07_scaling.ipynb  08_automatic_differentiation.ipynb  08_jaxopt.ipynb  09_jaxopt.ipynb  automatic_differentiation_example_once_estimagic_is_jax_compatible.ipynb  benchmark_plots.ipynb  global_optimization_tests.ipynb  jax_vmap.ipynb  jaxopt_exploration.ipynb
src/scipy_dev/notebooks/.ipynb_checkpoints/: 01_first_optimization_with_scipy_optimize-checkpoint.ipynb
src/scipy_dev/notebooks/solutions/: 01_first_optimization_with_scipy_optimize.ipynb  02_convert_previous_example_to_estimagic.ipynb  03_play_with_algorithm_and_algo_options.ipynb  04_benchmarking.ipynb  05_bounds_and_constraints.ipynb  06_scaling.ipynb  07_automatic_differentiation.ipynb  08_jaxopt.ipynb
src/scipy_dev/presentation/: custom.css  custom.scss  main.md  move.md  section_starter.md  structure.yaml
src/scipy_dev/presentation/sections/: body.md  title.md
src/scipy_dev/slidev/: package-lock.json  slides.md
src/scipy_dev/slidev/styles/: index.ts  layouts.css
src/scipy_dev/slidev_presentation/: package-lock.json  package.json  slides.md  slides_marp.md
src/scipy_dev/slidev_presentation/layouts/: section.vue
src/scipy_dev/slidev_presentation/styles/: layouts.css
src/scipy_dev/source_repo/: README.md  test_installation.py
tests/: test_filler.py
